@@ -1,3 +1,9 @@
+2009-03-01  Ben Abbott <bpabbott@mac.com>
+
+	* plot/colorbar.m: Bug fix. Allow hidden colorbars to be deleted,
+	and replace existing colorbar when a new one is created. Additional
+	demos are included to verify these behaviors.
+
 2009-02-28  Ben Abbott <bpabbott@mac.com>
 
 	* plot/__actual_axis_position__.m: Include file missed in prior
